--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-348.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-609.9KB/s(Youtube:不良林), server: 185.172.113.108, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-473.3KB/s(Youtube:不良林), server: 185.172.113.108, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-472.4KB/s(Youtube:不良林), server: 5.183.176.83, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-898.3KB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 2aef06f4-6fa1-3fe4-9c08-8bdbd2cefe4e, sni: sg1.jjzgy.live, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-698.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇯🇵 日本-624.7KB/s(Youtube:不良林), server: 185.172.113.108, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-748.9KB/s(Youtube:不良林), server: 5.183.176.92, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-1.17MB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.26MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 45379, type: trojan, password: d73e7fe4-88d2-4d9a-81c8-c9a97bbc1b84, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.36MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-1.06MB/s(Youtube:不良林), server: 103.172.116.10, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-624.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-748.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-624.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-748.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-624.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-748.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-624.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-748.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-624.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-748.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-624.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-748.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-624.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-748.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
