--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1019.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇯🇵 日本-1.58MB/s(Youtube:不良林), server: 185.172.113.108, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-760.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-522.0KB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.04MB/s(Youtube:不良林), server: 5.183.176.92, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-637.1KB/s(Youtube:不良林), server: 5.183.176.92, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-270.4KB/s(Youtube:不良林), server: 5.183.176.92, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-770.6KB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-504.8KB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.04MB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-975.5KB/s(Youtube:不良林), server: 5.183.176.92, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.71MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-327.9KB/s(Youtube:不良林), server: 185.172.113.108, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.01MB/s(Youtube:不良林), server: tt1.tjvpn.top, port: 2022, type: trojan, password: 0cb2cd1f-870b-485c-914a-60aba39eed39, sni: tt1.tjvpn.top, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.28MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1019.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-522.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-637.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-770.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1019.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-522.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-637.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-770.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1019.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-522.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-637.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-770.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1019.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-522.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-637.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-770.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1019.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-522.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-637.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-770.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1019.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-522.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-637.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-770.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1019.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-760.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-522.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-637.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-270.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-770.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-504.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-975.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
